syntax = "proto3";

package api;

option go_package = "./";

service Tasks {
  rpc GetOneTaskPack(TaskPackRequest) returns (TaskPackResponse) {}
  rpc AddOneTaskPack(NewTaskPackRequest) returns (NewTaskPackResponse) {}
  rpc GetMultiplePacks(GetMultiplePacksRequest) returns (GetMultiplePacksResponse) {}
}

message TaskPackRequest {
  string id = 1;
}

message TaskPackResponse {
  string id = 1;
  string title = 2;
  repeated string tasks = 3;
}

message NewTaskPackRequest {
  string id = 1;
  Pack pack = 2;
}

message Pack {
  string title = 1;
  repeated string tasks = 2;
}

message NewTaskPackResponse {
  string id = 1;
}

message GetMultiplePacksRequest {
  repeated string ids = 1;
}

message GetMultiplePacksResponse {
  repeated TaskPackResponse packs = 1;
}